Add CourseDay feature

--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,8 @@ div.body.body-center {
   background: linear-gradient(51deg, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 div.wrapper {
-  width:100%;
-  max-width: 800px;
+  width: 100%;
+  max-width: 1024px;
   margin: auto;
   padding: 40px 20px;
   background-color: #ffffff;
@@ -88,6 +88,10 @@ footer {
   margin-top: 5px;
 }
 .course .course-grade {
+  line-height: 1.3;
+  margin-top: 3px;
+}
+.course .course-day {
   line-height: 1.3;
   margin-top: 3px;
 }
